--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2604,9 +2604,10 @@ section.bg-light {
   width: 100%;
   border: 0;
   height: 50px;
-  line-height: 50px;
+  line-height: 40px;
   border-radius: 5px !important;
   margin-bottom: 30px;
+  padding: 0 18px;
 }
 
 .single-select-inner .nice-select span {
@@ -6735,7 +6736,6 @@ input:focus, select:focus {
 
 
 
-  
 
 
 
