--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5985,6 +5985,23 @@ input:focus, select:focus {
   font-size: 12px;
 }
 
+.notification-scroll {
+  max-height: 380px; /* Adjust height as needed */
+  overflow-y: auto;
+  scrollbar-width: thin;
+}
+
+/* Optional scrollbar styling for Webkit */
+.notification-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+.notification-scroll::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 4px;
+}
+
+
+
 /* Dropdown menu styles */
 .notification-dropdown {
   display: none; /* Hidden by default */
