--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1602,6 +1602,33 @@ ul {
 
 }
 
+.user-info-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  overflow: hidden;
+}
+
+.user-info-wrapper .user-image {
+  height: 40px;
+  width: 40px;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+
+.user-info-wrapper .user-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 110px; /* adjust as needed */
+  display: inline-block;
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+
 
 
 /* .navbar-area .nav-container .navbar-collapse .navbar-nav li.menu-item-has-children:before {
