--- a/public/assets/auth/css/style.css
+++ b/public/assets/auth/css/style.css
@@ -17652,3 +17652,27 @@ html[dir=rtl] .sidebar li > a .caret:before {
 }
 
 
+.btn-remove-field {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: none;
+  border-radius: 50%;
+  font-size: 14px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  margin-left: 8px;
+  transition: all 0.2s ease-in-out;
+}
+
+.btn-remove-field:hover {
+  background-color: #f1b0b7;
+  color: #491217;
+  transform: scale(1.1);
+}
+
+
+
