--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6509,6 +6509,8 @@ input:focus, select:focus {
 
 .updated-thumb img {
   width: 100%;
+  height: 300px;
+  object-fit: cover;
   display: block;
   border-radius: 10px;
   transition: transform 0.3s ease-in-out;
